<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="vmaestro.pis2017.ub.edu.MainActivity">

    <ImageButton
        android:id="@+id/conversor_id"
        android:layout_width="56dp"
        android:layout_height="58dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/change"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/spinner_id2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_id1"
        app:layout_constraintVertical_bias="0.511"
        app:srcCompat="@drawable/conversor" />

    <Spinner
        android:id="@+id/spinner_id1"
        android:layout_width="200dp"
        android:layout_height="54dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="84dp"
        android:prompt="@string/selector"
        android:spinnerMode="dialog"
        app:layout_constraintBottom_toTopOf="@+id/spinner_id2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/spinner_id2"
        android:layout_width="200dp"
        android:layout_height="54dp"
        android:layout_marginBottom="200dp"
        android:layout_marginStart="8dp"
        android:prompt="@string/selector"
        android:spinnerMode="dialog"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/commissionAmount"
        android:layout_width="135dp"
        android:layout_height="54dp"
        android:layout_marginBottom="28dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:inputType="number|numberDecimal"
        android:maxLength="6"
        android:selectAllOnFocus="false"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toEndOf="@+id/checkBox" />


    <TextView
        android:id="@+id/amountCurrency2"
        android:layout_width="135dp"
        android:layout_height="54dp"
        android:layout_marginBottom="200dp"
        android:layout_marginEnd="28dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:gravity="center_horizontal|center"
        android:singleLine="true"
        android:text="@string/_0_00"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toEndOf="@+id/spinner_id2" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="141dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:layout_marginStart="8dp"
        android:checked="false"
        android:contentDescription="@string/check_desc"
        android:text="@string/commission"
        android:textAlignment="viewStart"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/amountCurrency1"
        android:layout_width="135dp"
        android:layout_height="54dp"
        android:layout_marginEnd="28dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="84dp"
        android:ems="10"
        android:hint="@string/_0_00"
        android:inputType="number|numberDecimal"
        android:selectAllOnFocus="false"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toEndOf="@+id/spinner_id1"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBox_Factor"
        android:layout_width="169dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:layout_marginStart="8dp"
        android:checked="false"
        android:contentDescription="@string/check_desc"
        android:text="@string/factor"
        android:textAlignment="viewStart"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/checkBox"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/factorIn"
        android:layout_width="135dp"
        android:layout_height="54dp"
        android:layout_marginBottom="108dp"
        android:layout_marginEnd="36dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number|numberDecimal"
        android:maxLength="10"
        android:selectAllOnFocus="false"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/checkBox_Factor"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />


</android.support.constraint.ConstraintLayout>
